--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                     individuals has become ever more challenging. Here is where Zuri
                                     Team comes into play to bring the best suited talent for your
                                     company</p>
-                                <h3><a href="https://talent.zuri.team/">I am looking for talent ></a></h3>
+                                <h3><a href="https://talent.zuri.team/">I am looking for talent</a></h3>
                             </div>
                         </div>
                     </div>
