--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             <h2>Learn, Build, Grow.</h2>
             <p>Unlock your Brilliance with our hands-on <a href="https://training.zuri.team">beginner</a> and <a href="https://internship.zuri.team">expert training</a>. Zuri Team has been immensely successful in creating a global network of a highly adept intelligent workforce that can help your company achieve their mission-critical <a href="https://talent.zuri.team">projects and goals</a></p>
             <div class="btn-hero">
-                <a href="https://training.zuri.team/">
+                <a href="https://training.html">
                     <button class="btn2-hero"> I'm new to the industry</button>
                 </a>
                 <br/>
-                <a href="https://talent.zuri.team/">
+                <a href="https://talent.html">
                     <button class="btn3-hero"> I'm need industry experience</button>
                 </a>
             </div>
@@ -36,28 +36,28 @@
                 <div class="row">
                     <div class="col1">
                         <div class="card1">
-                            <img 
-                                src="https://res.cloudinary.com/dafsch2zs/image/upload/v1596628122/Zuri%20Landing/left_bvmv7q.png" alt="card-logo" class="image-card">
+                         <!--   <img 
+                                src="https://res.cloudinary.com/dafsch2zs/image/upload/v1596628122/Zuri%20Landing/left_bvmv7q.png" alt="card-logo" class="image-card">-->
                             <div class="content">
-                                <img  src="https://zuri.team/img/zuri-training-img.svg" class="image-card2" alt="card2-logo">
+                                <img src= "https://zuri.team/img/zuri-training-img.svg" class="image-card2" alt="card2-logo">
                                 <p>We understand a complete beginner cannot become a professional after a few weeks, the aim here is to get you familiar enough with each the tools such that you’ll be able to continue learning on your own with minimal support.</p>
-                                <h3><a href="https://training.zuri.team/">I want to be trained ></a></h3>
+                                <h3><a href="https://training.html/">I want to be trained ></a></h3>
                             </div>
                         </div>
                     </div>
                     <div class="col2">
                         <div class="card2">
-                            <img src="https://zuri.team/img/zuri-internship-img.svg" class="img-card2" alt="card3-logo">
+                            <img src="https://zuri.team/img/zuri-internship-img.svg" class="image-card2" alt="card3-logo">
                             <p>We place you in a work simulation. We give you tasks every week, the tasks ranges from easy to hard as you progress from stage to stage, making it to the final stage means you are ready for actual work.  </p>
                             <h3><a href="https://internship.zuri.team/">I want to join the internship ></a></h3>
                         </div>
                     </div>
                     <div class="col3">
                         <div class="card3">
-                            <img 
-                                src="https://res.cloudinary.com/dafsch2zs/image/upload/v1596628122/Zuri%20Landing/right_yz6hn3.png" class="card3-image" alt="card-logo">
+                            <!--<img 
+                                src="https://res.cloudinary.com/dafsch2zs/image/upload/v1596628122/Zuri%20Landing/right_yz6hn3.png" class="card3-image" alt="card-logo">-->
                             <div class="card3-div">
-                                <img  src="https://zuri.team/img/zuri-talent-img.svg" alt="card3-div-image">
+                                <img src="https://zuri.team/img/zuri-talent-img.svg" alt="card3-div-image" class="image-card2">
                                 <p>Keeping pace
                                     with projects and being on the look out for the extremely talented
                                     individuals has become ever more challenging. Here is where Zuri
@@ -89,11 +89,10 @@
             <div class="footer-class3">
                 <h3>Contact</h3>
                 <p>8 Jubliee-CMD Road, Magodo, <br />Lagos State</p>
-                <p>
                     <a href="mailto:hello@zuri.com">
-                        hello@zuri.team
+                        <p> hello@zuri.team </p>
                     </a>
-                </p>
+            
             </div>
             <div class="footer-class4">
                 <h3>Follow Us</h3>
