--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             <h2>Learn, Build, Grow.</h2>
             <p>Unlock your Brilliance with our hands-on <a href="https://training.zuri.team">beginner</a> and <a href="https://internship.zuri.team">expert training</a>. Zuri Team has been immensely successful in creating a global network of a highly adept intelligent workforce that can help your company achieve their mission-critical <a href="https://talent.zuri.team">projects and goals</a></p>
             <div class="btn-hero">
-                <a href="https://training.html">
+                <a href="https://training.zuri.team/">
                     <button class="btn2-hero"> I'm new to the industry</button>
                 </a>
                 <br/>
-                <a href="https://talent.html">
+                <a href="https://talent.zuri.team/">
                     <button class="btn3-hero"> I'm need industry experience</button>
                 </a>
             </div>
@@ -104,9 +104,9 @@
                 </div>
             </div>
         </div>
-        <div>
-            <hr class="break">
-        </div>
+        
+    <hr>
+    
         <div class="copyright">
             <p> &#169; 2020 ZURI TEAM </p>
         </div>
